# EasyMCU_ESP32C61

./: .gitignore  CMakeLists.txt  README.en.md  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32c61  sdkconfig.defaults.esp32s3
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/include/: console.h  device.h  hid.h  hid_pro2.h  ns2_codec.h  pro2.h  protocol.h  uart.h  uart_common.h  uart_easycon.h  utils.h
main/include/buffer/: zc_buffer.h
main/include/controller/: controller.h  hid_controller.h
main/include/protocol/: protocol.h
main/include/transport/: transport.h  transport_uart.h  transport_usb_serial_jtag.h
main/src/: device.c  gap.c  gatt.c  hid.c  hid_pro2.c  ns2.c  ns2_ble_gatt.c  ns2_codec.c  pro2.c  protocol.c  uart.c  uart_easycon.c  uart_simple.c
main/src/buffer/: zc_buffer.c
main/src/controller/: controller.c  hid_controller.c  hid_controller_pro2.c
main/src/protocol/: protocol_router.c
main/src/protocol/easycon/: easycon_parser_hid.c  easycon_parser_short_cmd.c
main/src/transport/: transport.c  transport_uart.c  transport_usb_cdc.c  transport_usb_serial_jtag.c
patch/: README.md  patch_nimble_lib.py
